--- a/My_Hobby.html
+++ b/My_Hobby.html
@@ -6,13 +6,25 @@
 </head>
 <body>
 <form>
-<h2>SỞ THÍCH CỦA BẠN</h2>
-    <h3>Họ và tên:</h3>
-    <input type="text" name="yourname"/><br/>
-    <h3>Email</h3>
-    <input type="text" name="email"/><br/>
-
-
+<h2><span style="color:white;background-color:orangered":>SỞ THÍCH CỦA BẠN</span></h2>
+    <table>
+    <h3><tr><td><span style="color:blue">Họ và tên:</span></td>
+        <td><input type="text" name="yourname"/></td></h3></tr>
+    <h3><tr><td><span style="color:blue">Email:</span></td>
+        <td><input type="text" name="email"/></td></h3></tr>
+    </table>
+<table>
+    <h3><tr><td rowspan="3"><span style="color:blue">Sở thích:</span></td>
+            <td><input type="checkbox" name="hobby"><span style="color:orangered">Thể thao</span></td>
+            <td><input type="checkbox" name="hobby"><span style="color:orangered">Âm nhạc</span></td>
+            <td><input type="checkbox" name="hobby"><span style="color:orangered">Đọc sách</span></td></tr>
+        <tr><td><input type="checkbox" name="hobby"><span style="color:orangered">Lướt web</span></td>
+            <td><input type="checkbox" name="hobby"><span style="color:orangered">Chơi game</span></td>
+            <td><input type="checkbox" name="hobby"><span style="color:orangered">Điện ảnh</span></td></tr>
+        <tr><td><input type="checkbox" name="hobby"><span style="color:orangered">Du lịch</span></td></tr></h3>
+</table>
+    <input type="button" name="submitform" value="Gửi thông tin">
+    <input type="reset" name="reset" value="Nhập lại">
 </form>
 </body>
 </html>
