--- a/30_12_21_My_Hobby.html
+++ b/30_12_21_My_Hobby.html
@@ -9,7 +9,7 @@
 <h2><span style="color:white;background-color:orangered":>SỞ THÍCH CỦA BẠN</span></h2>
     <table>
     <h3><tr><td><span style="color:blue">Họ và tên:</span></td>
-        <td><input type="text" name="yourname"/></td></h3></tr>
+            <td><input type="text" name="name"/></td></h3></tr>
     <h3><tr><td><span style="color:blue">Email:</span></td>
         <td><input type="text" name="email"/></td></h3></tr>
     </table>
@@ -23,7 +23,7 @@
             <td><input type="checkbox" name="hobby"><span style="color:orangered">Điện ảnh</span></td></tr>
         <tr><td><input type="checkbox" name="hobby"><span style="color:orangered">Du lịch</span></td></tr></h3>
 </table>
-    <input type="button" name="submitform" value="Gửi thông tin">
+    <input type="button" name="submit" value="Gửi thông tin">
     <input type="reset" name="reset" value="Nhập lại">
 </form>
 </body>
